merge from trunk
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/bamRecursion@13185 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c